--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Chris Hancock | Developer
 email: hi@chancock.com
 description: > # this means to ignore newlines until "baseurl:"
-  Chris builds beautiful websites from Brooklyn, NY.
+  Chris builds the internet in 2017.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://chancock.com" # the base hostname & protocol for your site, e.g. http://example.com
 facebook_username: chancock09
