--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Chris Hancock | Developer
+title: Chris Hancock
 email: hi@chancock.com
 description: >
   Chris builds the internet in 2017.
